--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,5 @@
 
+* {cursor: none;}
 
 html, body {
   background: gray;
@@ -14,6 +15,7 @@ canvas {
   background: teal;
   top: 0;
   left: 0;
+  cursor: none;
 }
 
 /* .page-wrapper {
